syntax = "proto3";

package pb;

option go_package = "pb/auth";

import "google/protobuf/timestamp.proto";

message CreateAuthenticationRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string phone = 4;
}

message AuthenticationUser {
  string id = 1;
  string email = 2;
  string username = 3;
  string phone = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  AuthenticationUser authentication_user = 2;
}

service AuthenticationService {
  rpc CreateAuthentication(CreateAuthenticationRequest) returns (AuthenticationUser);
  rpc Login(LoginRequest) returns (LoginResponse);
}